[tool.poetry]
name = "fpcnn"
version = "0.1.0"
description = "FINCH Predictive Coder Neural Network"
authors = ["DM1122 <34867698+DM1122@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
tensorflow = "^2.4.1"
pre-commit = "^2.11.1"
progress = "^1.5"
scipy = "^1.6.2"
pandas = "^1.2.3"
plotly = "^4.14.3"
spectral = "^0.22.2"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib="stdlib"
import_heading_thirdparty="external"
import_heading_firstparty="project"

[tool.black]
line-length = 88

[tool.flakehell]
format = "colored"
max_line_length = 88
show_source = true

[tool.flakehell.plugins]
flake8-bugbear = ["+*", "-B305"]
flake8-builtins = ["+*"]
flake8-blind-except = ["+*"]
flake8-comprehensions = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pep3101 = ["+*","-S001"]
mccabe = ["+*"]
pep8-naming = ["+*","-N806","-N803"]
pycodestyle = ["+*","-E203","-W503", "-E501"]
pyflakes = ["+*"]
pylint = ["+*"]