[tool.poetry]
name = "fpcnn"
version = "0.1.0"
description = "FINCH Predictive Coder Neural Network"
authors = ["DM1122 <34867698+DM1122@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7.9, <3.8"
tensorflow = "^2.4.1"
scipy = "^1.6.2"
pandas = "^1.2.3"
plotly = "^4.14.3"
spectral = "^0.22.2"
matplotlib = "3.2.2"    # https://github.com/plotly/plotly.py/issues/2913
scikit-optimize = "^0.8.1"
pydot = "^1.4.2"
tqdm = "^4.61.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"
pre-commit = "^2.13.0"
pylint = "^2.8.3"
pytest = "^6.0"
pylint-runner = "^0.6.0"
pytest-html = "^3.1.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib="stdlib"
import_heading_thirdparty="external"
import_heading_firstparty="project"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
addopts = "--html=logs/pytest/pytest-report.html --self-contained-html --cov=./" 
testpaths = ["tests"]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_auto_indent = true
markers = [
    "slow: tests that are slow to run (deselect with '-m \"not slow\"').",
    "plot: tests that produce plots.",
    "timed: tests that run many times using timeit module.",
    "star: a starred test. Marker should be removed once testing is complete."
]

[tool.pylint.messages_control]
max-line-length = 88
disable = ["invalid-name","too-many-arguments", "too-many-locals", "arguments-differ", "unnecessary-lambda", "too-many-instance-attributes", "protected-access", "duplicate-code", "too-few-public-methods", "logging-fstring-interpolation", "not-callable", "too-many-statements", "pointless-statement", "not-context-manager","fixme"]
generated-members=["numpy.*","torch.*"] # https://github.com/pytorch/pytorch/issues/701

[tool.coverage.run]
data_file = "logs/pytest/pytest-coverage"
omit = ["tests/*"]